[package]
name = "arca_music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.35"
glutin = "0.27"
egui = "0.28.1"
egui_glium = "0.26.3"
rodio = "0.19.0"
eframe = "0.28.1"
egui_extras = "0.28.1"
env_logger = "0.11.5"
rfd = "0.14.1"
rusttype = "0.9.3"
id3 = "1.14.0"
dirs = "5.0.1"
mp3-duration = "0.1.10"
